feat(vk): 提交部分3dgs生成，链路

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -109,6 +109,7 @@
         "pages/ar/photo-depth-detect/photo-depth-detect",
         "pages/ar/gaussian-splatting/gaussian-splatting",
         "pages/ar/gaussian-splatting/gaussian-splatting-ar",
+        "pages/ar/gaussian-splatting/gaussian-splatting-generate",
         "pages/page/set-navigation-bar-title/set-navigation-bar-title",
         "pages/page/navigation-bar-loading/navigation-bar-loading",
         "pages/page/navigator/navigator",
