--- a/project.private.config.json
+++ b/project.private.config.json
@@ -1,5 +1,5 @@
 {
-  "libVersion": "3.3.4",
+  "libVersion": "3.6.5",
   "description": "项目私有配置文件。此文件中的内容将覆盖 project.config.json 中的相同字段。项目的改动优先同步到此文件中。详见文档：https://developers.weixin.qq.com/miniprogram/dev/devtools/projectconfig.html",
   "setting": {
     "urlCheck": false,
@@ -11,6 +11,13 @@
   "condition": {
     "miniprogram": {
       "list": [
+        {
+          "name": "gaussian-splatting-generate",
+          "pathName": "packageAPI/pages/ar/gaussian-splatting/gaussian-splatting-generate",
+          "query": "",
+          "launchMode": "default",
+          "scene": null
+        },
         {
           "name": "gaussian-splatting-ar",
           "pathName": "packageAPI/pages/ar/gaussian-splatting/gaussian-splatting-ar",
