fix: appjson add pages

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -44,11 +44,15 @@
         "pages/view/sticky/sticky-section/sticky-section",
         "pages/view/movable-view/movable-view",
         "pages/view/cover-view/cover-view",
+        "pages/view/cover-image/cover-image",
+        "pages/view/match-media/match-media",
+        "pages/view/page-container/page-container",
         "pages/view/sticky/sticky",
         "pages/content/text/text",
         "pages/content/icon/icon",
         "pages/content/progress/progress",
         "pages/content/rich-text/rich-text",
+        "pages/content/selection/selection",
         "pages/form/button/button",
         "pages/form/checkbox/checkbox",
         "pages/form/form/form",
