fix: Update code format and appid

--- a/project.config.json
+++ b/project.config.json
@@ -74,7 +74,7 @@
     "ignore": [],
     "include": []
   },
-  "appid": "wx622bee4f78fa4f5a",
+  "appid": "wxe5f52902cf4de896",
   "projectname": "miniprogram-demo-master",
   "libVersion": "3.7.6"
 }
