--- a/project.config.json
+++ b/project.config.json
@@ -45,7 +45,9 @@
     "localPlugins": false,
     "condition": false,
     "skylineRenderEnable": true,
-    "compileWorklet": true
+    "compileWorklet": true,
+    "swc": false,
+    "disableSWC": true
   },
   "compileType": "miniprogram",
   "simulatorType": "wechat",
@@ -74,5 +76,5 @@
   },
   "appid": "wxe5f52902cf4de896",
   "projectname": "miniprogram-demo-master",
-  "libVersion": "2.33.0"
+  "libVersion": "3.7.6"
 }
