--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
   },
   "homepage": "https://github.com/wechat-miniprogram/miniprogram-demo#readme",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.6.1",
-    "@typescript-eslint/parser": "^4.6.1",
+    "@typescript-eslint/eslint-plugin": "^8.26.1",
+    "@typescript-eslint/parser": "^8.26.1",
     "babel-eslint": "^10.1.0",
     "eslint": "^8.57.1",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -32,17 +32,20 @@
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^4.0.0",
     "eslint-plugin-typescript": "^0.14.0",
-    "gulp": "^4.0.2",
+    "gulp": "^5.0.0",
     "gulp-if": "^3.0.0",
     "gulp-ignore": "^3.0.0",
     "gulp-postcss": "^9.0.1",
     "gulp-rename": "^2.0.0",
     "gulp-replace": "^1.1.3",
-    "jest": "^26.6.3",
-    "miniprogram-automator": "^0.10.0",
+    "jest": "^29.7.0",
+    "miniprogram-automator": "^0.5.1",
     "postcss": "^8.3.11",
     "postcss-css-variables": "^0.18.0",
-    "typescript": "^3.2.1",
-    "typescript-eslint-parser": "^22.0.0"
+    "typescript": "^5.8.2",
+    "typescript-eslint-parser": "^18.0.0"
+  },
+  "dependencies": {
+    "miniprogram-ci": "^1.3.13"
   }
 }
