--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -523,7 +523,7 @@
   ],
   "multiSelectSupportedMaterials": [
     {
-      "materialType": ["image/*", "text/message"],
+      "materialType": ["image/*"],
       "desc": "聊天内容长按多选打开",
       "path": "packageAPI/pages/chattool/material_open/material_open",
       "scopes": []
