--- a/.eslintignore
+++ b/.eslintignore
@@ -4,3 +4,5 @@
 /cloudfunctions/ARDemo/wx-server-sdk-wxg-service/index.js
 /miniprogram/packageSkylineExamples
 /miniprogram/_commons/0.js
+/miniprogram/packageAPI/pages/ar/3dmarker-ar/protobuf
+/miniprogram/packageAPI/components/tdesign-miniprogram
