--- a/.eslintignore
+++ b/.eslintignore
@@ -6,3 +6,4 @@
 /miniprogram/_commons/0.js
 /miniprogram/packageAPI/pages/ar/3dmarker-ar/protobuf
 /miniprogram/packageAPI/components/tdesign-miniprogram
+/miniprogram/packageAPI/pages/ar/gaussian-splatting/util/gl-matrix-min.js
