--- a/.eslintignore
+++ b/.eslintignore
@@ -7,3 +7,4 @@
 /miniprogram/packageAPI/pages/ar/3dmarker-ar/protobuf
 /miniprogram/packageAPI/components/tdesign-miniprogram
 /miniprogram/packageAPI/pages/ar/gaussian-splatting/util/gl-matrix-min.js
+/miniprogram/packageChatTool/components/tdesign-miniprogram
