--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,10 +3,7 @@ name: WeChat MiniProgram Demo CI/CD
 on:
   push:
     branches:
-      - master
-  pull_request:
-    branches:
-      - master
+      - feat-ce
 jobs:
   upload:
     runs-on: ubuntu-latest
@@ -15,5 +12,6 @@ jobs:
         env:
           WX_PRIVATE_KEY: ${{ secrets.WX_PRIVATE_KEY }}
         run: |
+          mkdir -p ./build
           echo "$WX_PRIVATE_KEY" > ./build/key
           node ./build/ci.js
