--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,9 +20,12 @@ jobs:
           ls -la
           echo "build目录内容:"
           ls -la ./build/
-          
+
       - name: Install dependencies
         run: npm install
+
+      - name: Run package script
+        run: npm run init
           
       - name: Upload MiniProgram
         env:
