--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "miniprogram/packageSkylineExamples"]
 	path = miniprogram/packageSkylineExamples
-	url = git@github.com:wechat-miniprogram/awesome-skyline.git
+	url = https://github.com/wechat-miniprogram/awesome-skyline.git
