--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,8 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Run package script
+        run: npm run init
           
       - name: Upload MiniProgram
         env:
