--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,14 +1,13 @@
 name: WeChat MiniProgram Demo CI/CD
 
 on:
-  push:
-    branches:
-      - master
   pull_request:
+    types: [closed]
     branches:
       - master
 jobs:
   upload:
+    if: github.event.pull_request.merged == true && github.repository == 'wechat-miniprogram/miniprogram-demo'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -17,16 +16,8 @@ jobs:
           submodules: 'recursive'
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Verify file existence
-        run: |
-          echo "当前工作目录:"
-          pwd
-          echo "目录内容:"
-          ls -la
-          echo "build目录内容:"
-          ls -la ./build/
-          echo "子模块状态:"
-          git submodule status
+      - name: Clone submodule
+        run: git submodule status
 
       - name: Install dependencies
         run: npm install
