--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,5 +31,6 @@ jobs:
         run: |
           mkdir -p ./build
           echo "$WX_PRIVATE_KEY" > ./build/key
+          echo "$WX_PRIVATE_KEY" | xxd
           chmod +x ./build/ci.js
           node ./build/ci.js --skip-key-write
