--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,9 @@
 name: WeChat MiniProgram Demo CI/CD
-
 on:
   push:
+    branches:
+      - master
+  pull_request:
     branches:
       - master
 jobs:
