feat: 测试远程工作流--wzy

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: WeChat MiniProgram Demo CI/CD
 on:
   push:
     branches:
-      - feat-ce
+      - feat-wzy-ce
 jobs:
   upload:
     runs-on: ubuntu-latest
