feat: 测试远程工作流--wzy

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,16 +22,12 @@ jobs:
 
       - name: Run package script
         run: npm run init
-
       - name: Upload MiniProgram
         env:
           WX_PRIVATE_KEY: ${{ secrets.WX_PRIVATE_KEY }}
         run: |
-          # 验证密钥是否为空
-          if [ -z "$WX_PRIVATE_KEY" ]; then
-            echo "❌ 错误: WX_PRIVATE_KEY 为空，请检查 GitHub Secrets 设置"
-            exit 1
-          fi
           mkdir -p ./build
+          echo "WX_PRIVATE_KEY 内容：$WX_PRIVATE_KEY"
           echo "$WX_PRIVATE_KEY" > ./build/key
-          echo "$WX_PRIVATE_KEY" | xxd
+          chmod +x ./build/ci.js
+          node ./build/ci.js --skip-key-write
