--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,9 +24,19 @@ jobs:
         run: npm run init
       - name: Upload MiniProgram
         env:
-          WX_PRIVATE_KEY: ${{ secrets.WX_PRIVATE_KEY }}
-        run: |
-          mkdir -p ./build
-          echo "$WX_PRIVATE_KEY" > ./build/key
-          chmod +x ./build/ci.js
-          node ./build/ci.js --skip-key-write
+    WX_PRIVATE_KEY: ${{ secrets.WX_PRIVATE_KEY }}
+  run: |
+    mkdir -p ./build
+
+    # 打印私钥长度和内容（仅调试用）
+    echo "WX_PRIVATE_KEY 长度：${#WX_PRIVATE_KEY}"
+    
+    # 可选：打印部分内容（避免敏感信息泄露）
+    echo "$WX_PRIVATE_KEY" | head -c 50 && echo "... (只显示前50字符)"
+
+    # 写入私钥文件
+    echo "$WX_PRIVATE_KEY" > ./build/key
+
+    # 继续执行上传脚本
+    chmod +x ./build/ci.js
+    node ./build/ci.js --skip-key-write
