--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -304,7 +304,8 @@
         "pages/preset-router/list/index",
         "pages/open-container/index/index",
         "pages/open-container/detail/index",
-        "pages/open-container/other/index"
+        "pages/open-container/other/index",
+        "pages/page-return-gesture/index/index"
       ],
       "renderer": "skyline"
     },
