fix: fix navigation-bar not centered

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -528,6 +528,7 @@
     "skyline": {
       "defaultDisplayBlock": true,
       "defaultContentBox": true,
+      "tagNameStyleIsolation": "legacy",
       "disableABTest": true,
       "sdkVersionBegin": "3.0.0",
       "sdkVersionEnd": "15.255.255"
